--- a/libraries/libminiupnpc/Changelog.txt
+++ b/libraries/libminiupnpc/Changelog.txt
@@ -1,5 +1,34 @@
-$Id: Changelog.txt,v 1.185 2013/05/03 09:05:38 nanard Exp $
+$Id: Changelog.txt,v 1.193 2014/02/05 17:26:45 nanard Exp $
 miniUPnP client Changelog.
+
+2014/02/05:
+  handle EINPROGRESS after connect()
+
+2014/02/03:
+  minixml now handle XML comments
+
+VERSION 1.9 : released 2014/01/31
+
+2014/01/31:
+  added argument remoteHost to UPNP_GetSpecificPortMappingEntry()
+  increment API_VERSION to 10
+
+2013/12/09:
+  --help and -h arguments in upnpc.c
+
+2013/10/07:
+  fixed potential buffer overrun in miniwget.c
+  Modified UPNP_GetValidIGD() to check for ExternalIpAddress
+
+2013/08/01:
+  define MAXHOSTNAMELEN if not already done
+
+2013/06/06:
+  update upnpreplyparse to allow larger values (128 chars instead of 64)
+
+2013/05/14:
+  Update upnpreplyparse to take into account "empty" elements
+  validate upnpreplyparse.c code with "make check"
 
 2013/05/03:
   Fix Solaris build thanks to Maciej Małecki
